welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:14: error: ')' expected but 'for' found.
    for (i <- 0 to Tab.length-1) {
    ^